Tue Dec 19 21:39:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* syscalls.cc (remove): New function, overriding the newlib
	implementation.

Tue Dec 19 16:26:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* environ.cc (struct parse_thing): Add entry for new CYGWIN option
	`smbntsec'.
	* path.cc (path_conv::check): Check path for being a remote path.
	If so and `allow_smbntsec' is set to FALSE, set has_acls to FALSE.
	* security.cc: Add global definition for `allow_smbntsec'.
	* security.h: Add extern declaration for `allow_smbntsec'.
	* fhandler.cc (fhandler_disk_file::open): Eliminate extern declaration
	of `allow_ntsec'.
	* syscalls.cc: Ditto.

Fri Dec 15 18:54:42 2000 Bradley A. Town <townba@pobox.com>

	* fhandler_console.cc (read): Add support for xterm-style mouse event
	reporting.
	(fhandler_console::char_command): Honor mouse events.
	(fhandler_console::open): Enable mouse input events.
	(fhandler_console::input_tcsetattr): Ditto.
	* select.cc (peek_console): Add check for mouse events.

Fri Dec 15 17:23:17 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (normalize_posix_path): Calculate path name length overruns
	more dynamically.
	(normalize_win32_path): Ditto.
	* Makefile.in: Avoid scanning the directory twice for *.d files.

Thu Dec 14 23:37:51 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler.h (fhandler_console): Add additional argument to
	char_command method.
	* fhandler_console.cc (fhandler_console::read): Revert previously
	misapplied patch.
	(fhandler_console::char_command): Add a second argument.
	(fhandler_console::write): Recognize when a '?' is found after a
	<esc>[.

Tue Dec  5 17:06:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_rexec): Eliminate superfluous call to
	`set_socket_inheritance'.
	* include/sys/socket.h: Add SUS defines for option values to `shutdown'.

Sun Dec 10 17:19:04 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sysexits: New file.

2000-12-09  Egor Duda <deo@logos-m.ru>
